Added sharing api
