# libs/emoji-tracker-lib/src/api/openapi/swagger.json
@@ -67,6 +67,28 @@
 				],
 				"type": "object",
 				"additionalProperties": false
+			},
+			"SuccessResponse_any_": {
+				"properties": {
+					"response": {}
+				},
+				"required": [
+					"response"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"SuccessResponse_string_": {
+				"properties": {
+					"response": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"response"
+				],
+				"type": "object",
+				"additionalProperties": false
 			}
 		},
 		"securitySchemes": {}
@@ -250,6 +272,78 @@
 						}
 					}
 				}
+			}
+		},
+		"/users/share/{hash}": {
+			"get": {
+				"operationId": "HandlerFunc",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/SuccessResponse_any_"
+								}
+							}
+						}
+					}
+				},
+				"summary": "get user's mood\nfilter with this-month, previous-month, last-month",
+				"tags": [
+					"Sharing"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "hash",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			}
+		},
+		"/users/{userId}/share/mood": {
+			"get": {
+				"operationId": "HandlerFunc",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/SuccessResponse_string_"
+								}
+							}
+						}
+					}
+				},
+				"summary": "get user's mood\nfilter with this-month, previous-month, last-month",
+				"tags": [
+					"Sharing"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "userId",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					},
+					{
+						"in": "query",
+						"name": "filter",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
 			}
 		}
 	},
